[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pySTEPS-BE"
authors = [{name = "Michiel Van Ginderachter", email = "michiel.vanginderachter@meteo.be"}]
dynamic = ["version", "description"]
dependencies = [
    "sphinx >=4.3.0",
    "sphinx-rtd-theme ==0.5.2",
]
